--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/clean-blog.min.css') }}">
     <title>Flask project</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li> <!--double curly brackets contain an "expression", which is outputting something either onto the screen or in href-->
             <li><a href="{{ url_for('about') }}">About</a></li>
