--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/home-bg.jpg') }}')">
+  <header class="masthead" style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
