--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('index') }}">Start Bootstrap</a>
+      <a class="navbar-brand" href="{{ url_for('index') }}">Torin &amp; Company</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -43,8 +43,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+            <h1>Thorin &amp; Company</h1>
+            <span class="subheading">Thorin and his company of dwarves</span>
           </div>
         </div>
       </div>
