Add for loop to display characters on left and right side of the page

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,9 +17,12 @@
 </p>
 {% for member in company %}
 <!--to add for loop, compant is the list we created in Python file-->
+
 <div class="row featuretet">
+    {% if loop.index % 2 != 0 %}
+    <!---->
     <div class="col-md-7">
-        <h3>{{member.name}}</h3>
+        <h3>{{loop.index}}.{{member.name}}</h3>
         <!--this will reference the member variable from out loop, and grab the contents of the "name" key from our JSON file-->
         <p>
             {{member.description}}
@@ -28,6 +31,18 @@
         <img src="{{member.image_source}}" alt="Thorin" class="featurette-image image-responsive">
         <!--we also added a couple of class names provided by our Clean Blog template and Bootstrap-->
     </div>
+    {% else %}
+    <div class="col-md-5">
+        <img src="{{member.image_source}}" alt="Thorin" class="featurette-image image-responsive">
+        <!--we also added a couple of class names provided by our Clean Blog template and Bootstrap-->
+    </div>
+    <div class="col-md-7">
+        <h3>{{loop.index}}.{{member.name}}</h3>
+        <!--this will reference the member variable from out loop, and grab the contents of the "name" key from our JSON file-->
+        <p>
+            {{member.description}}
+    </div>
+    {% endif %}
 </div>
 <hr class="featuret-divider">
 <!--class name provided by Clean Blog template-->
